--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -13,6 +13,7 @@
                     <%= link_to post_image_path(post_image.id) do %>
                     <%= attachment_image_tag post_image, :image %>
                     <% end %>
+                    <%= paginate @post_images %>
                   </div>
                 </div>
                 <div class="block-content">
@@ -24,13 +25,13 @@
                   </h3>
                   <p><%= post_image.caption %></p>
                   <ul class="inline-meta">
-                    <li>By
-                      <%= post_image.user.name %>
-                    </li>
-                    <li>
-                      <a href="#">23 コメント</a>
-                    </li>
-                  </ul>
+  <li>By
+    <%= post_image.user.name %>
+  </li>
+  <li>
+    <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
+  </li>
+</ul>
                 </div>
               </div>
             </div>
