--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -4,17 +4,22 @@
       <div class="col-md-12 post_images_container">
         <div class="post-item">
 
-          <div class="post-meta-top">
-            <div class="post-image">
-              <a href="images/sample-post1.jpg" class="theater">
-                <!-- <img src="images/sample-post1.jpg"> -->
-                <%= image_tag('sample-post1.jpg') %>
-              </a>
-            </div>
-          </div>
-
-          <div class="post-content">
-            <h2 class="post-title">ここにタイトル</h2>
+         <div class="post-meta-top">
+      <div class="post-image">
+        <%= attachment_image_tag @post_image, :image %>
+      </div>
+    </div>
+    <div class="post-content">
+      <h2 class="post-title"><%= @post_image.shop_name %></h2>
+      <ul class="meta-info-cells v4 float-wrapper">
+        <li>
+          <i class="fa fa-user"></i>By<a href="#">
+            <%= @post_image.user.name %></a>
+        </li>
+        <li>
+          <i class="fa fa-calendar"></i><%= @post_image.created_at.strftime('%Y/%m/%d') %>
+        </li>          <div class="post-content">
+            <!--<h2 class="post-title">ここにタイトル</h2>-->
             <ul class="meta-info-cells v4 float-wrapper">
               <li>
                 <i class="fa fa-user"></i>By
@@ -38,25 +43,28 @@
   <% end %>
 </li>
 <% end %>
-            
+
             <li>
  　　　　　　　　　　　 <i class="fa fa-comment"></i>
  　　　　　　　　　　　 <a href="#comments"><%= @post_image.post_comments.count %></a>
 　　　　　　</li>
-              
+　　　　　　<li>
+             <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+            </li>
+
             </ul>
-            <div class="post-content-inner mt-20">
-              <p>ここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキスト</p>
-            </div>
+            <!--<div class="post-content-inner mt-20">-->
+            <!--  <p>ここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキスト</p>-->
+            <!--</div>-->
           </div>
 
           <div class="comment-list bt style-2" id="comments">
            <div class="float-wrapper">
            <h2 class="comment-count"><%= @post_image.post_comments.count %>件コメント</h2>
           </div>
-          
-          
-          
+
+
+
             <ol>
   <% @post_image.post_comments.each do |post_comment| %>
     <li class="comment">
